@startuml

title __PROJETO's Class Diagram__\n

  package  {
    class Aluguer {
        - inicioCarro : Point
        - fimCarro : Point
        - i : Point
        - f : Point
        - dataInicio : Date
        - dataFim : Date
        - classificacao : int
        - estado : int
        {static} + REJEITADO : int
        {static} + PENDENTE : int
        {static} + ACEITE : int
        + Aluguer()
        + Aluguer()
        + Aluguer()
        + getMeteorologia()
        + setMeteorologia()
        + getInicioCarro()
        + setInicioCarro()
        + getFimCarro()
        + setFimCarro()
        + getCar()
        + setCar()
        + getCli()
        + setCli()
        + getP()
        + setP()
        + getI()
        + setI()
        + getF()
        + setF()
        + getDataInicio()
        + setDataInicio()
        + getDataFim()
        + setDataFim()
        + getClassificacao()
        + setClassificacao()
        + getEstado()
        + setEstado()
        + clone()
        + equals()
        + toString()
    }
  }
  

  package  {
    class Ator {
        - email : String
        - nome : String
        - password : String
        - morada : String
        - data : Date
        + Ator()
        + Ator()
        + Ator()
        + getEmail()
        + getNome()
        + getPassword()
        + getMorada()
        + getData()
        + setEmail()
        + setNome()
        + setPassword()
        + setMorada()
        + setData()
        + equals()
        + clone()
        + toString()
    }
  }
  

  package  {
    class Veiculo {
        - velocidade : int
        - preco : double
        - classificacao : int
        - coordenada : Point
        - historico : List<Aluguer>
        + Veiculo()
        + Veiculo()
        + Veiculo()
        + getVelocidade()
        + getPreco()
        + getClassificacao()
        + getCoordenada()
        + getHistorico()
        + getProprietario()
        + setVelocidade()
        + setPreco()
        + setClassificacao()
        + setCoordenada()
        + setHistorico()
        + setProprietario()
        + clone()
        + equals()
        + toString()
    }
  }
  

  package  {
    class CarroEletrico {
        - consumo : double
        - bateria : double
        + CarroEletrico()
        + CarroEletrico()
        + CarroEletrico()
        + getConsumo()
        + setConsumo()
        + getBateria()
        + setBateria()
        + AutonomiaEletrico()
    }
  }
  

  package  {
    class CarroGasolina {
        - gasolina : double
        - consumo : double
        + CarroGasolina()
        + CarroGasolina()
        + CarroGasolina()
        + getGasolina()
        + getConsumo()
        + setGasolina()
        + setConsumo()
        + AutonomiaGasolina()
    }
  }
  

  package  {
    class CarroHibrido {
        - bateria : double
        - gasolina : double
        - consumoBateria : double
        - consumoGasolina : double
        + CarroHibrido()
        + CarroHibrido()
        + CarroHibrido()
        + getBateria()
        + setBateria()
        + getGasolina()
        + setGasolina()
        + getConsumoBateria()
        + setConsumoBateria()
        + getConsumoGasolina()
        + setConsumoGasolina()
        + AutonomiaHibrido()
    }
  }
  

  package  {
    class Cliente {
        - coordenada : Point
        - historico : List<Aluguer>
        + Cliente()
        + Cliente()
        + Cliente()
        + getCoordenada()
        + getHistorico()
        + setCoordenada()
        + setHistorico()
        + equals()
        + toString()
        + clone()
    }
  }
  

  package  {
    class Meteorologia {
        - velocidadeVento : int
        - temperatura : int
        - precipitacao : int
        + Meteorologia()
        + Meteorologia()
        + getVelocidadeVento()
        + setVelocidadeVento()
        + getTemperatura()
        + setTemperatura()
        + getPrecipitacao()
        + setPrecepitacao()
        + medicaoMinutos()
        + equals()
        + toString()
    }
  }
  

  package  {
    class Proprietario {
        - classificacao : int
        - historico : List<Aluguer>
        - listaCarros : List<Veiculo>
        + Proprietario()
        + Proprietario()
        + Proprietario()
        + getListaCarros()
        + setListaCarros()
        + getClassificacao()
        + setClassificacao()
        + getHistorico()
        + setHistorico()
        + equals()
        + toString()
        + clone()
    }
  }
  

  package  {
    class Servico {
        - carroseletricos : List<CarroEletrico>
        - carroshibridos : List<CarroHibrido>
        - carrosgasolina : List<CarroGasolina>
        + Servico()
        + Servico()
        + Servico()
        + getCarroseletricos()
        + setCarroseletricos()
        + getCarroshibridos()
        + setCarroshibridos()
        + getCarrosgasolina()
        + setCarrosgasolina()
        + equals()
        + toString()
        + clone()
        + desloca()
        + temAutonomia()
        + custo()
        + tempoCliente()
        + aceitaEstado()
        + rejeitaEstado()
        + fimInicio()
    }
  }
  

  package  {
    class Test {
        {static} + main()
    }
  }
  

  Aluguer o-- Veiculo : car
  Aluguer o-- Cliente : cli
  Aluguer o-- Proprietario : p
  Aluguer o-- Meteorologia : meteorologia
  Veiculo o-- Proprietario : p
  CarroEletrico -up-|> Veiculo
  CarroGasolina -up-|> Veiculo
  CarroHibrido -up-|> Veiculo
  Cliente -up-|> Ator
  Proprietario -up-|> Ator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
